	* numeric.c: refactoring of bit-wise functions for readability
	* numeric.c (cob_decimal_set_display): prefer local buffer over
	  dynamic allocation
	* numeric.c (cob_cmp_int, cob_cmp_uint, cob_cmp_llint): pre-comparision
	  by checking sign/zero and reduced number of decimal shifting
	  dynamic allocation
	* move.c (store_common_region): minor optimization
	* move.c:

2022-11-04  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c [__PDCURSES__]: drop use of PDC_free_memory_allocations
	  as testing showed it raising memory errors and the function was
	  removed in PDCursesMod
	* common.c (cob_cmp, cob_cmp_all, cob_cmp_alnum): use buffer to drop the
	  overpunch sign, removing the need to add it back later; which solves
	  both issues of "changing invalid data by DISPLAY" and raising strange
	  watchpoints during debugging
	* common.c (common_cmpc, common_cmps, locate_sign): minor optimization

2022-10-22  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (set_sequential_variable_length): extracted from sequential_read
	  and extended to verify COB_VARSEQ_TYPE 0 (default) by its two NULL bytes
	* fileio.c (sequential_read): return status 04 if variable record length is
	  outside the record min/max, truncating the record if necessary, while
	  still position until the next record length - fixing Bug #808
	* fileio.c (cob_fd_file_open): for variable-length record sequential files
	  do a pre-validation of the first record length, returning status 39 when
	  the first record doesn't match the fixed file attributes
	* common.c (cob_fatal_error): added COB_STATUS_39_CONFLICT_ATTRIBUTE
	* common.c (cob_sig_handler): fixed uninitialized access

2022-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* statement.def: added STMT_PRESENT_WHEN

2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: moved header files that are not installed from EXTRA_DIST
	  to _SOURCES (per automake manual)
	* fileio.c (sequential_read): andle variable-sized record-sequential